--- a/Part 4/Zoo/Zoo.Logic.Tests/Zoo.Logic.Tests.csproj
+++ b/Part 4/Zoo/Zoo.Logic.Tests/Zoo.Logic.Tests.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Zoo.Domain\Zoo.Domain.csproj" />
+    <ProjectReference Include="..\Zoo.Logic\Zoo.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
